Feat. Create Service services and dtos
