# src/modules/branchs/dto/create-branch.dto.ts
@@ -1,5 +1,6 @@
 import { z } from 'nestjs-zod/z';
 import { createZodDto } from 'nestjs-zod';
+import { Service } from '../../../modules/services/entities/service.entity';
 
 const branchsSchema = z.object({
   branch_name: z.string(),
@@ -12,6 +13,13 @@ const branchsSchema = z.object({
   branch_phone: z.string().optional().nullable(),
   complements: z.string().max(100),
   user_id: z.number(),
+  services: z
+    .array(
+      z.object({
+        id: z.number().int().positive(),
+      }),
+    )
+    .optional(),
 });
 
 export class CreateBranchDto extends createZodDto(branchsSchema) {
@@ -50,11 +58,11 @@ export class CreateBranchDto extends createZodDto(branchsSchema) {
    * @example 230B
    */
   local_number: string;
-   /**
+  /**
    * Number phone of the branch.
    * @example 32227460
    */
-   branch_phone?: string;
+  branch_phone?: string;
   /**
    * Information additional of the branch.
    * @example Next to the bookstore
@@ -65,4 +73,12 @@ export class CreateBranchDto extends createZodDto(branchsSchema) {
    * @example 1
    */
   user_id: number;
+  /**
+   * Services of the branch
+   * @example [
+   *   {id: 1},
+   *   {id: 2}
+   * ]
+   */
+  services?: Service[];
 }
